--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3d95081fe9.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
 </head>
 
 <body>
-
+    <div id="slider">
+        <button class="back"><i class="fa-solid fa-chevron-left"></i></button>
+        <button class="next"><i class="fa-solid fa-chevron-right"></i></button>
+        <img src="" alt="img" class="main-img">
+        <div class="pagination"></div>
+    </div>
 </body>
 
 </html>
